[gd_scene load_steps=3 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/SettingsMenu.gd" type="Script" id=2]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.137255, 0.168627, 0.498039 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 134.0
margin_top = 64.0
margin_right = 217.0
margin_bottom = 133.0
custom_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 36.0
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="Panel/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 1.0
margin_right = 45.0
margin_bottom = 12.0
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="Panel/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 65.0
margin_right = 83.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="Panel/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 21.0
margin_right = 45.0
margin_bottom = 32.0
text = "FullScreen"

[node name="FullScreenCheck" type="CheckBox" parent="Panel/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 65.0
margin_top = 18.0
margin_right = 83.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 83.0
margin_bottom = 69.0

[node name="AcceptButton" type="Button" parent="Panel/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 13.0
text = "Accept"

[node name="CancelButton" type="Button" parent="Panel/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 83.0
margin_bottom = 13.0
size_flags_horizontal = 10
text = "Cancel"
align = 2

[connection signal="item_selected" from="Panel/CenterContainer/VBoxContainer/GridContainer/ResolutionOption" to="." method="_on_ResolutionOption_item_selected"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/HBoxContainer/AcceptButton" to="." method="_on_AcceptButton_pressed"]
